tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalSpeed definition for vehicle '1';
 must be one of ("current", or a float>=0)
Quitting (on error).
